// Copyright 2020 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package ufs.config;

option go_package = "config";

// Config is the configuration data served by luci-config for this app.
message Config {
  string luci_config_service = 1;
}